test/cases/compile_errors/comptime_slice_of_an_undefined_slice.zig
comptime {
    var a: []u8 = undefined;
    var b = a[0..10];
    _ = &b;
}

// error
// backend=stage2
// target=native
//
// :3:14: error: non-zero length slice of undefined pointer
